--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
       figure
         include images/flourish-ornamental.svg
         figcaption A flourish ornamental
-      h1 Next Future Movement
+      h1 Movement For Our Future
     main
       ol
         +list-element('Stop hate', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid at debitis nam nemo possimus rem sapiente! Alias aspernatur atque cum deleniti facere hic labore molestias nisi odit, omnis praesentium sed tempora veritatis. Aspernatur, commodi consectetur corporis culpa delectus ducimus eaque eius eligendi eos esse facilis fuga incidunt inventore ipsam iste maxime nam necessitatibus nihil quibusdam ratione repellendus repudiandae, sed totam, ullam vel vero voluptatem. Amet aspernatur consectetur eligendi fugit ipsam, magni maxime nisi nostrum placeat possimus quis repellat voluptatem voluptatum? Eum inventore voluptates voluptatum. Aliquid amet dolorum ducimus earum ex id, ipsa libero minima obcaecati repudiandae voluptas voluptate voluptatum?')
